# PeriConto_v1

./: Dockerfile  README.md  docker_bricks.sh  docker_build.sh  docker_push.sh  docker_run.sh  docker_trees.sh  dockerfile_graphviz_test  pyproject.toml  requirements.txt
notes/: how_to_generate_UML_diagram_using_pyreverse.md
src/: BricksAndTreeSemantics.py  BricksAutomaton.py  BricksSchemata.py  BricksSchemataBackEnd.py  BricksSchemataFrontEnd.py  BricksSchemata_gui.py  BricksSchemata_gui.ui  DataModelNoBrickNumbers.py  TreeAutomaton.py  TreeSchemataBackEnd.py  TreeSchemataFrontEnd.py  TreeSchemata_gui.py  TreeSchemata_gui.ui  Utilities.py
src/resources/: RadioButtonDialog.py  __init__.py  radioButtonDialog.py  resources_icons.py  ui_combo_dialog.py  ui_combo_dialog.ui  ui_combo_dialog_impl.py  ui_single_list_selector.py  ui_single_list_selector.ui  ui_single_list_selector_impl.py  ui_string_dialog.py  ui_string_dialog_impl.py
